force-app/main/default/objects/SFFR_Payment_Group__c/SFFR_Payment_Group__c.object-meta.xml
<CustomObject>
    <label>Payment group</label>
    <nameField>
        <label>Payment Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>