force-app/main/default/objects/SFFR_Payment_Group__c/fields/Banked_Total__c.field-meta.xml
<CustomField>
    <fullName>Banked_Total__c</fullName>
    <label>Banked Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>