force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_Accounting_Date__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Accounting_Date__c</fullName>
    <label>Accounting date</label>
    <type>Date</type>
</CustomField>