force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_Batch_Total__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Batch_Total__c</fullName>
    <description>Flow updated sum of collected amount</description>
    <inlineHelpText>Amount that was originally collected in this payment group (before any payment possibly get rejected by the bank)</inlineHelpText>
    <label>Batch Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>