force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Collection_Date__c</fullName>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>