force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>SFFR_External_Reference__c</fullName>
    <label>External reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>