force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_Internal_Reference__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Internal_Reference__c</fullName>
    <description>System field used to group payement together from the flow automation</description>
    <label>Internal Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>