force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_Max_Payment__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Max_Payment__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Maximum Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>