force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_Number_Payment__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Number_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>