force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_Payment_method__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptgiro</fullName>
            </value>
            <value>
                <fullName>BACS Direct Debit</fullName>
            </value>
            <value>
                <fullName>Bollettino Postale</fullName>
            </value>
            <value>
                <fullName>Credit Transfer</fullName>
            </value>
            <value>
                <fullName>CreditCard</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Ideal</fullName>
            </value>
            <value>
                <fullName>OGM</fullName>
            </value>
            <value>
                <fullName>SEPA Direct Debit</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>