force-app/main/default/objects/SFFR_Payment_Group__c/fields/SFFR_Status__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pre-checked</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>