force-app/main/default/objects/SFFR_Payment_Group__c/recordTypes/SFFR_Bank.recordType-meta.xml
<RecordType>
    <fullName>SFFR_Bank</fullName>
    <active>true</active>
    <label>Bank</label>
</RecordType>