force-app/main/default/objects/SFFR_Payment_Group__c/recordTypes/SFFR_Fulfillement.recordType-meta.xml
<RecordType>
    <fullName>SFFR_Fulfillement</fullName>
    <active>true</active>
    <label>Fulfillement</label>
</RecordType>