force-app/main/default/objects/SFFR_Payment_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SFFR_External_Reference__c</columns>
    <columns>SFFR_Batch_Total__c</columns>
    <columns>Banked_Total__c</columns>
    <columns>SFFR_Status__c</columns>
    <columns>SFFR_Bank_Date__c</columns>
    <columns>SFFR_Payment_Method__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>